--- a/index.html
+++ b/index.html
@@ -9,29 +9,65 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/4.1.2/papaparse.min.js"></script>
+    <script src="https://unpkg.com/chart.js@2.4.0/dist/Chart.bundle.js"></script>
+    <script src="https://unpkg.com/chartkick@2.2.1"></script>
+    <script src="http://danml.com/js/download.js"></script>
+    <script src="https://unpkg.com/vue@2.1.8/dist/vue.js"></script>
+    <script src="assets/vue-chartkick.js"></script>
     <link rel="stylesheet" href="css/main.css">
     <!--[if IE]>
 		<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 	<![endif]-->
 </head>
 
-<body id="home">
-    <nav class="indigo">
-        <div class="nav-wrapper">
-            <a href="#" class="brand-logo center">Duke IRV</a>
-        </div>
-    </nav>
-    <div class="container">
-        <div class="row">
-            <div class="col s12">
-                <div class="card">
-                    <div class="card-content">
-                        <span class="card-title"> IRV Results </span>
-                        <p>
-                            No results to show; upload a CSV file to begin. Please make sure that the <b> first </b> line of the input data is column headers (i.e. delete the first two rows from DukeGroups output).
-                            <br />
-                            <input type="file" id="csvFileInput" onchange="handleFiles(this.files)" accept=".csv" />
-                        </p>
+<body>
+    <div id="app">
+        <nav class="indigo">
+            <div class="nav-wrapper">
+                <a href="#" class="brand-logo center">Duke IRV</a>
+            </div>
+        </nav>
+        <div class="container">
+            <div class="row" v-if="positions.length > 0">
+                <div class="col s12">
+                    <div class="card">
+                        <div class="card-content">
+                            <div class="card-title"> Positions </div>
+                            <a v-for="pos in positions" v-on:click="setCurrPos(pos)" class="waves-effect waves-light btn position-button" v-bind:class='{ disabled : currPos === pos }'>{{pos}}</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col s12">
+                    <div class="card">
+                        <div class="card-content">
+                            <span class="card-title"> IRV Results <span v-if="currPos !== ''"> - {{currPos}} <a v-on:click="downloadVotes" class="waves-effect waves-light btn download-button"> Download Votes for this Position </a>
+ </span></span>
+                            <p v-if="positions.length === 0">
+                                No results to show; upload a CSV file to begin. Please make sure that the <b> first </b> line of the input data is column headers (i.e. delete the first two rows from DukeGroups output).
+                                <br />
+                                <br />
+                                <input type="file" id="csvFileInput" onchange="handleFiles(this.files)" accept=".csv" />
+                            </p>
+                            <p v-if="positions.length > 0">
+                                <br /> This election had {{ results.voteCount }} non-empty votes, out of a total of {{voteCount}} student ballots. The following graphs represent the rounds of Instant Runoff Voting required to arrive at a majority winner.
+                                <br />
+                                <br />
+                                <div v-for="round in results.rounds">
+                                    <h4>Round {{round.number}}:</h4>
+                                    <bar-chart v-if="round.number === 1" :data="round.chartData"></bar-chart>
+                                    <bar-chart v-if="round.number > 1" :stacked="true" :data="round.stackedData"></bar-chart>
+                                    <div v-if="round.number < results.rounds.length">
+                                        Loser: {{round.loser}}
+                                    </div>
+                                    <br />
+                                </div>
+                            </p>
+                            <h3 v-if="positions.length > 0">
+                                Winner: {{results.winner}}
+                            </h3>
+                        </div>
                     </div>
                 </div>
             </div>
